[package]
name = "spectrusty-tutorial"
version = "0.2.1"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
publish = false
repository = "https://github.com/royaltm/spectrusty-tutorial"
homepage = "https://royaltm.github.io/spectrusty-tutorial/"
readme = "README.md"
license = "BlueOak-1.0.0"
include = ["/src/", "/TUTORIAL_STEP*.md", "/README.md"]
description = """
Examples for the tutorial on how to build emulators with the SPECTRUSTY library.
"""

[dependencies]
cpal = "0.13.1"
minifb = "0.19"
rand = "0.8"
log = "0.4"
simple_logger = "1.9.0"

[dependencies.spectrusty]
version = "0.3.1"
features = ["audio", "cpal"]
# path = "../spectrusty"

[dependencies.spectrusty-utils]
version = "0.3.1"
features = ["minifb"]
# path = "../spectrusty/spectrusty-utils"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[patch.crates-io]
minifb = { git = "https://github.com/emoon/rust_minifb" }
