[package]
name = "spectrusty-tutorial"
version = "0.4.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
publish = false
repository = "https://github.com/royaltm/spectrusty-tutorial"
homepage = "https://royaltm.github.io/spectrusty-tutorial/"
readme = "README.md"
license = "BlueOak-1.0.0"
include = ["/src/", "/TUTORIAL_STEP*.md", "/README.md"]
description = """
Examples for the tutorial on how to build emulators with the SPECTRUSTY library.
"""

[features]
default = []
boxed_frame_cache = ["spectrusty/boxed_frame_cache"]
measure_cpu_freq = []

[dependencies]
cpal = "0.15.2"
minifb = "0.25"
rand = "0.8"
log = "0.4"
simple_logger = "4"
rfd = "0.11"

[dependencies.spectrusty]
# version = "0.4"
git = "https://github.com/royaltm/spectrusty"
features = ["audio", "cpal"]
# path = "../spectrusty"

[dependencies.spectrusty-utils]
# version = "0.4"
git = "https://github.com/royaltm/spectrusty"
features = ["minifb"]
# path = "../spectrusty/spectrusty-utils"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winuser", "winerror", "shellscalingapi"]

[profile.release]
lto = true
panic = 'abort'
opt-level = 3
